--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@types/react-dom": "^18.0.6",
     "babel-plugin-macros": "^3.1.0",
     "customize-cra": "^1.0.0",
+    "daisyui": "^2.31.0",
     "pdfjs-dist": "^2.15.349",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
@@ -26,6 +27,7 @@
     "react-scripts": "5.0.1",
     "tw-elements": "^1.0.0-alpha12",
     "typescript": "^4.8.3",
+    "uniqueid": "^1.0.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
