--- a/package.json
+++ b/package.json
@@ -27,7 +27,7 @@
     "react-scripts": "5.0.1",
     "tw-elements": "^1.0.0-alpha12",
     "typescript": "^4.8.3",
-    "uniqueid": "^1.0.0",
+    "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
