--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,9 @@
         ["module-resolver", {
             "root": ["./"],
             "alias": {
-                "Components": "src/components"
+                "Components": "src/components",
+                "DataAPI": "src/data-api",
+                "Helpers": "src/helpers"
             }
         }]
     ]
