--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babel-plugin-macros": "^3.1.0",
     "customize-cra": "^1.0.0",
     "daisyui": "^2.31.0",
+    "downloadjs": "^1.4.7",
     "pdfjs-dist": "^2.15.349",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
@@ -60,6 +61,7 @@
     "autoprefixer": "^10.4.12",
     "babel-plugin-module-resolver": "^4.1.0",
     "gh-pages": "^4.0.0",
+    "pdf-lib": "^1.17.1",
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
   },
