--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "@types/node": "^16.11.59",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
-    "babel-plugin-macros": "^3.1.0",
+    " -plugin-macros": "^3.1.0",
     "customize-cra": "^1.0.0",
     "daisyui": "^2.31.0",
     "downloadjs": "^1.4.7",
@@ -65,5 +65,5 @@
     "postcss": "^8.4.16",
     "tailwindcss": "^3.1.8"
   },
-  "homepage": "https://cherokee-rose.github.io/cv-application"
+  "homepage": "https://eugenechevski.github.io/cv-application"
 }
